write README more. gzip to write phrase-table.

--- a/README
+++ b/README
@@ -2,16 +2,18 @@
 
 !!!NOTE!!! This program is an alpha version. !!!NOTE!!!
 
-This program converts the configurations and phrase tables of moses decoder ( https://github.com/moses-smt/mosesdecoder )
-into mtplz decoder ( https://github.com/kpu/mtplz ).
+This program converts the configurations and phrase tables of Moses decoder into mtplz decoder.
+Moses decoder: https://github.com/moses-smt/mosesdecoder
+mtplz: https://github.com/kpu/mtplz
 
 * Usage
 python m2m.py --ini moses.ini --decoder mtplz/bin/decode --output /path/to/output
 
 After converting the configurations, run /path/to/output/mtplz_wrap.sh.
 Note that:
-stdin = foreign language text, and,
-stdout = translated text.
+stdin = foreign language sentences,
+stdout = translated sentences, and,
+stderr = logs of mtplz.
 
 * License
 MIT
